src/test/ui/async-await/issues/issue-65159.stderr
error[E0107]: this enum takes 2 type arguments but only 1 type argument was supplied
  --> $DIR/issue-65159.rs:5:20
   |
LL | async fn copy() -> Result<()>
   |                    ^^^^^^ -- supplied 1 type argument
   |                    |
   |                    expected 2 type arguments
   |
note: enum defined here, with 2 type parameters: `T`, `E`
  --> $SRC_DIR/core/src/result.rs:LL:COL
   |
LL | pub enum Result<T, E> {
   |          ^^^^^^ -  -
help: add missing type argument
   |
LL | async fn copy() -> Result<(), E>
   |                             ^^^

error[E0282]: type annotations needed
  --> $DIR/issue-65159.rs:8:5
   |
LL |     Ok(())
   |     ^^ cannot infer type for type parameter `E` declared on the enum `Result`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0107, E0282.
For more information about an error, try `rustc --explain E0107`.
